# TextUtilities

./: mkdocs.yml  pyproject.toml
0.1/: 404.html  index.html
0.1/search/: search_index.json
0.1/test/: index.html
TextUtilities/color/: __init__.py
docs/: 404.html  index.html  objects.inv
docs/search/: search_index.json
docs/test/: index.html
docsmd/: index.md
