[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "text-utilities"
version = "1.0.0"
authors = [
  { name="Joseph Knutson", email="jmknutson2012@gmail.com" },
]
description = "A small example package"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["text", "setuptools", "development"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Joey1222/TextUtilities"
Issues = "https://github.com/Joey1222/TextUtilities/issues"